# poc-near-real-time

./: README.md  docker-compose.yml
dagster/: .env  daemon.Dockerfile  dagster.yaml  server.Dockerfile  web.Dockerfile  workspace.yaml
dagster/server/: pyproject.toml
dagster/server/source/: defs.py
dagster/server/source/assets/: monthly_asset.py  my_asset.py
dagster/server/source/jobs/: etl_job.py
dagster/server/source/repositories/: main_repository.py
dagster/server/source/schedules/: etl_schedule.py
